--- a/src/Sitecore.Support.318134.347848/App_Config/Include/zzz/Sitecore.Support.318134.347848.config
+++ b/src/Sitecore.Support.318134.347848/App_Config/Include/zzz/Sitecore.Support.318134.347848.config
@@ -1,5 +1,18 @@
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" >
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:env="http://www.sitecore.net/xmlconfig/env/">
     <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
-
+        <pipelines>
+            <httpRequestBegin>
+                <processor type="Sitecore.Pipelines.HttpRequest.BeginDiagnostics, Sitecore.Kernel">
+                    <patch:d />
+                </processor>
+                <processor type="Sitecore.Pipelines.HttpRequest.BeginDiagnostics, Sitecore.Kernel" env:require="Profiling" />
+            </httpRequestBegin>
+            <httpRequestEnd>
+                <processor type="Sitecore.Pipelines.HttpRequest.EndDiagnostics, Sitecore.Kernel">
+                    <patch:d />
+                </processor>
+                <processor type="Sitecore.Pipelines.HttpRequest.EndDiagnostics, Sitecore.Kernel" env:require="Profiling" />
+            </httpRequestEnd>
+        </pipelines>
     </sitecore>
 </configuration>
