--- a/src/Sitecore.Support.318134.347848/App_Config/Include/zzz/Sitecore.Support.318134.347848.config
+++ b/src/Sitecore.Support.318134.347848/App_Config/Include/zzz/Sitecore.Support.318134.347848.config
@@ -13,6 +13,26 @@
                 </processor>
                 <processor type="Sitecore.Pipelines.HttpRequest.EndDiagnostics, Sitecore.Kernel" env:require="Profiling" />
             </httpRequestEnd>
+            <mvc.renderPlaceholder>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderPlaceholder.InitializeProfiling, Sitecore.Mvc">
+                    <patch:d />
+                </processor>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderPlaceholder.InitializeProfiling, Sitecore.Mvc" env:require="Profiling"/>
+            </mvc.renderPlaceholder>
+            <mvc.renderRendering>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderRendering.InitializeProfiling, Sitecore.Mvc">
+                    <patch:d />
+                </processor>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderRendering.StartStatisticRecording, Sitecore.Mvc">
+                    <patch:d />
+                </processor>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderRendering.RecordStatistic, Sitecore.Mvc">
+                    <patch:d />
+                </processor>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderRendering.InitializeProfiling, Sitecore.Mvc" env:require="Profiling"/>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderRendering.StartStatisticRecording, Sitecore.Mvc" env:require="Profiling"/>
+                <processor type="Sitecore.Mvc.Pipelines.Response.RenderRendering.RecordStatistic, Sitecore.Mvc" env:require="Profiling"/>
+            </mvc.renderRendering>
         </pipelines>
     </sitecore>
 </configuration>
